--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
-  "devDependencies": {
-    "socket.io": "^4.8.1"
-  }
+  "devDependencies": {}
 }
